# cmake_tests

./: README.md
better_structure/: CMakeLists.txt  README.md
better_structure/app/: CMakeLists.txt  main.cpp  other_src.cpp
better_structure/app/include/: other_src.h
better_structure/srcA/: CMakeLists.txt  srcA.cpp
better_structure/srcA/include/lib/: srcA.h
better_structure/srcB/: CMakeLists.txt  srcB.cpp
better_structure/srcB/include/lib/: srcB.h
cross_dependency/: CMakeLists.txt  README.md  main.cpp
cross_dependency/srcA/: CMakeLists.txt  srcA.cpp  srcA.h
cross_dependency/srcB/: CMakeLists.txt  srcB.cpp  srcB.h
simple_dependency/: CMakeLists.txt  README.md  main.cpp
simple_dependency/srcA/: CMakeLists.txt
